--- a/package.json
+++ b/package.json
@@ -1,51 +1,40 @@
 {
-    "name": "pokedex-api-challenge",
-    "version": "1.0.0",
-    "description": "pokedex-api-challenge",
-    "main": "index.js",
-    "scripts": {
-        "build": "webpack --mode production",
-        "start": "webpack-dev-server --mode development"
-    },
-    "dependencies": {
-        "color-thief-react": "^1.0.2",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "react-lazyload": "^2.6.8",
-        "react-router-dom": "^5.2.0"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.9.0",
-        "@babel/plugin-proposal-object-rest-spread": "^7.10.1",
-        "@babel/preset-env": "^7.9.5",
-        "@babel/preset-react": "^7.9.4",
-        "babel-eslint": "^10.1.0",
-        "babel-loader": "^8.1.0",
-        "babel-preset-expo": "^8.2.1",
-        "css-loader": "^3.5.2",
-        "eslint": "^6.8.0",
-        "eslint-config-airbnb": "^18.1.0",
-        "eslint-config-prettier": "^6.11.0",
-        "eslint-plugin-import": "^2.20.2",
-        "eslint-plugin-jsx-a11y": "^6.2.3",
-        "eslint-plugin-prettier": "^3.1.3",
-        "eslint-plugin-react": "^7.19.0",
-        "file-loader": "^6.0.0",
-        "html-loader": "^1.1.0",
-        "html-webpack-plugin": "^4.2.0",
-        "mini-css-extract-plugin": "^0.9.0",
-        "node-sass": "^4.13.1",
-        "prettier": "^2.0.5",
-        "sass-loader": "^8.0.2",
-        "webpack": "^4.43.0",
-        "webpack-cli": "^3.3.11",
-        "webpack-dev-server": "^3.10.3"
-    },
-    "keywords": [
-        "React",
-        "Javascript",
-        "Router"
+  "name": "app",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "node-sass": "^4.14.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-lazyload": "^2.6.8",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "serve": "^11.3.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "server": "serve -s build"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
     ],
-    "author": "Andres Campuzano <campuxano88@gmail.com>",
-    "license": "MIT"
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
